--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "consolidate": "^0.14.1",
+    "cookie-parser": "^1.4.3",
     "csurf": "^1.8.3",
     "dont-sniff-mimetype": "^1.0.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "forever": "^0.15.1",
     "helmet": "^2.0.0",
+    "libxmljs": "^0.19.1",
     "marked": "0.3.9",
     "mongodb": "^2.1.18",
+    "multer": "^1.4.1",
     "node-esapi": "0.0.1",
     "serve-favicon": "^2.3.0",
     "swig": "^1.4.2",
-    "underscore": "^1.8.3",
-    "libxmljs": "^0.19.1",
-    "multer": "^1.4.1"
+    "underscore": "^1.8.3"
   },
   "comments": {
     "//": "a9 insecure components"
